--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ h1 {
   width: 660px;
   height: 660px;
   border: 10px solid black;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 button {
@@ -43,4 +45,8 @@ button {
 
 button:hover {
   background-color: #472183;
+}
+
+.item {
+  border: 1px solid blue;
 }
