--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 h1 {
   margin: 0;
   text-align: center;
+  padding-top: 0.5em;
 }
 .main {
   display: flex;
@@ -41,6 +42,7 @@ button {
   background-color: #4b56d2;
   color: #fff;
   cursor: pointer;
+  margin-left: 0.5em;
 }
 
 button:hover {
